# ned2_dual-arm

./: ASYNC_DUAL_ARM_EXECUTOR.md  LICENSE  design.md  implementation.md  introduction.md  references.md  system_design.md
setup/: calibrate.sh  configure_tcp.sh
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_dual_arm_moveit_config/: CMakeLists.txt  package.xml
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_dual_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_mock_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_mock_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  niryo_ned2_mock.ros2_control.xacro  niryo_ned2_mock.srdf  niryo_ned2_mock.urdf.xacro  ros2_controllers.yaml  workspace_scene.yaml
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_mock_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  sim_mock_ompl.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ned-ros2-driver/niryo_ned_moveit_configs/niryo_ned2_moveit_config/: package.xml
test/demo/: demo1.py  demo2.py  demo3.py  demo4.py  demo4.py.backup
test/moveit_py/: moveit1.py  moveit2.py  moveit3.py  moveit4.py  moveit5.py  moveit6.py
test/pr3243/: test10.py  test11.py  test12.py  test13.py  test4.py  test5.py  test5_1.py  test6.py  test7.py  test8.py  test9.py
(+33 files in other folders)
